# lib/api-spec/openapi.yaml
@@ -99,6 +99,16 @@ paths:
           schema:
             type: string
             default: en
+        - name: checkIn
+          in: query
+          schema:
+            type: string
+            format: date
+        - name: checkOut
+          in: query
+          schema:
+            type: string
+            format: date
       responses:
         "200":
           description: List of rooms
